2002-10-01  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* shimbun/sb-airs.el (shimbun-airs-group-path-alist): Add entry
	for wl-en@lists.airs.net.

2002-10-01  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-e21.el (w3m-favicon-type): New user variable.
	(w3m-setup-favicon): Check `w3m-favicon-type'.
	(w3m-buffer-favicon): Convert image to `w3m-favicon-type' instead
	of 'xpm.

	* shimbun/mew-shimbun.el (all): Sync up head branch.

2002-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-server-regexp): Fix the value;
	translate the comment into English.

2002-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-lynx-like-map): Bind key M-] to `w3m-zoom-in-image';
	bind key M-[ to `w3m-zoom-out-image'.
	(w3m-info-like-map): Ditto.
	(w3m-mode): Document those new keys.

2002-09-30  KURODA Chihiro  <chee@iijmio-mail.jp>

	* w3m.el (w3m-resize-image-scale): New user option.
	(w3m-toggle-inline-image): Call `w3m-zoom-in-image' without
	resizing.
	(w3m-resize-inline-image-internal): New inline function.
	(w3m-zoom-in-image): New command.
	(w3m-zoom-out-image): New command.

	* w3m-util.el (w3m-image-scale): New macro.

	* w3m-image.el (w3m-resize-image-by-rate): New function.

	* w3m-e21.el (w3m-create-resized-image): New function.

2002-09-21  Kahlil HODGSON  <dorge@tpg.com.au>

	* w3m.el (ffap-url-regexp): Make sure it is non-nil.

2002-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>
	Follow the change in Gnus.

	* mime-w3m.el (mime-w3m-mode-ignored-keys): New variable.
	(mime-w3m-setup): Use it.

2002-09-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-lynx-like-map): Unbind the key "N" to the command
	`w3m-namazu' in order to avoid binding collision to
	`w3m-view-next-page'.  Thanks to Satoshi TAOKA for his report.
	(w3m-mode): Fix its docstring for `w3m-antenna-add-current-url'.
	Thanks to Satoshi TAOKA and Yoichi NAKAYAMA for the advice.

2002-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>
